# QuickClipboard

./: .gitignore  .lintstagedrc.json  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  opencode.json  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: linux-setup.md
scripts/: build-tauri.js  community-build.js  community-check.js  dev-tauri.js  ensure-clean-cargo-toml.js  ensure-clean-workspace.js
src/: AGENTS.md
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json  screenshot.json
src-tauri/plugins/screenshot-suite-oss/: Cargo.toml
src-tauri/plugins/screenshot-suite-oss/web/: package.json
src-tauri/src/: AGENTS.md  lib.rs  main.rs
src-tauri/src/commands/: settings.rs
src-tauri/src/services/database/: clipboard.rs
src-tauri/src/services/low_memory/: manager.rs  state.rs
src-tauri/src/services/paste/: keyboard.rs
src-tauri/src/services/settings/: model.rs
src-tauri/src/services/system/: elevate.rs  hotkey.rs  ipc_socket.rs  mod.rs  power.rs  raw_input.rs  wayland_shortcuts.rs
src-tauri/src/services/webdav_sync/: webdav_client.rs
src-tauri/src/utils/: positioning.rs  screen.rs
src-tauri/src/windows/main_window/: snap.rs  visibility.rs
src-tauri/src/windows/tray/: events.rs  setup.rs
src/plugins/context_menu/: contextMenu.js
src/shared/: AGENTS.md
src/shared/api/: clipboard.js
src/shared/hooks/: useWindowAnimation.js
src/shared/locales/: en-US.json  zh-CN.json
src/shared/services/: settingsService.js
src/shared/store/: clipboardStore.js  settingsStore.js
src/shared/utils/: contextMenu.js
src/windows/main/: App.jsx
src/windows/main/components/: ClipboardList.jsx  ClipboardTab.jsx  FavoritesList.jsx  GroupsPopup.jsx  TabNavigation.jsx
src/windows/main/components/ClipboardContent/: FileContent.jsx
src/windows/settings/sections/: AboutSection.jsx  AppearanceSection.jsx  GeneralSection.jsx
