[package]
name = "QuickClipboard"
version = "0.3.0-beta.3"
description = "一个功能强大的剪贴板管理工具，帮助您更高效地管理和使用剪贴板内容"
authors = ["MoSheng"]
edition = "2021"

[lib]
name = "quickclipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard-rs = {git="https://github.com/ChurchTao/clipboard-rs", tag="v0.3.2"}
once_cell = "1.18.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "rayon"] }
rayon = "1.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
blake3 = "1.5"
rodio = "0.17"
if-addrs = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
fastrand = "2.0"
regex = "1.11.1"
zip = "2.1"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
file_icon_provider = {git="https://github.com/iohannrabeson/file_icon_provider"}
parking_lot = "0.12"
tungstenite = "0.26"
tauri-plugin-http = "2.5.2"
tauri-plugin-drag = "2"
enigo = "0.6.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-store = "2"
active-win-pos-rs = "0.8"
atree = "0.5.2"
rstar = "0.12.2"
qcocr = {git="https://github.com/mosheng1/qcocr"}
winreg = "0.55"
lan-sync-core = { path = "plugins/lan-sync-core" }
low-memory-fltk = { path = "plugins/low-memory-fltk" }

screenshot-suite = { path = "plugins/screenshot-suite", optional = true }

# 图片查看器 (社区编译时不启用)
gpu-image-viewer = { git = "ssh://git@github.com/mosheng1/gpu-image-viewer.git", optional = true }
# gpu-image-viewer = { path = "plugins/gpu-image-viewer", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }

[features]
default = ["full"]
full = ["dep:gpu-image-viewer", "dep:screenshot-suite"]
gpu-image-viewer = ["dep:gpu-image-viewer"]
screenshot-suite = ["dep:screenshot-suite"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
incremental = false
overflow-checks = false
